--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,10 @@
 .Weather{
     border: 1px solid #dadde1;
+            font-family: arial, sans-serif;
+}
+.Weather h1{
+    color: #202124;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 100;
 }
