--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,27 @@
 .Weather{
     border: 1px solid #dadde1;
-            font-family: arial, sans-serif;
-}
+    font-family: arial, sans-serif;
+    color: rgb(135,135, 135);
+    padding: 16px;
+    border-radius: 4px;
+  }
 .Weather h1{
     color: #202124;
     font-size: 24px;
     line-height: 29px;
     font-weight: 100;
+    margin: 20px 0 0 0;
+  }
+
+.Weather ul{
+margin:0;
+padding: 0;
+}
+.Weather li{
+color: #70757a;
+font-size: 16px;
+font-weight: 100;
+line-height: 19px;
+text-align: left;
+
 }
