--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     margin: 30px auto;
    };
    
-   .App footer{
+   .footer-content{
  margin: 10px 0;
- font-size: 11px;
+ font-size: 50px;
    }
