--- a/src/Weather.css
+++ b/src/Weather.css
@@ -23,5 +23,26 @@ font-size: 16px;
 font-weight: 100;
 line-height: 19px;
 text-align: left;
-
+list-style:none;
 }
+.Weather img {
+  height: 64px;
+  margin-right: 10px;
+  display: inline-block;
+  width: 64px;
+}
+.Weather .temperature {
+ font-weight: 400;
+color: rgb(33,33,33);
+font-size: 64px;
+ line-height: 64px;
+}
+.Weather .unit{
+color: rgb(33, 33, 33);
+font-size: 16px;
+font-weight: 400;
+position: relative;
+top: -34px;
+line-height:1;
+margin-left:5px;
+} 
