--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
    .App{
     max-width: 600px;
     margin: 30px auto;
-   };
-   
+   }
+
 .footer-content{
  margin: 10px 0;
- font-size: 11px;
+ font-size: 13px;
    }
