--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,7 +25,7 @@ line-height: 19px;
 text-align: left;
 list-style:none;
 }
-.Weather img {
+.Weather canvas {
   height: 64px;
   margin-right: 10px;
   display: inline-block;
